[Fix] OK-1286, OK-616【OKBET-UI改版-Android-我的】賽果結算頁面不符設計稿

--- a/app/src/main/res/layout/activity_results_settlement_new.xml
+++ b/app/src/main/res/layout/activity_results_settlement_new.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_141414_F3F4F5"
+    android:background="@color/color_131932_F0F5FA"
     tools:context="org.cxct.sportlottery.ui.results.ResultsSettlementActivity">
 
     <org.cxct.sportlottery.ui.common.CustomTopToolbar
@@ -64,22 +64,22 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
-                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent">
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
                 <TextView
                     android:id="@+id/tv_league"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginRight="@dimen/margin_10"
                     android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:maxLines="1"
                     android:text="@string/league"
                     android:textColor="@color/color_BBBBBB_333333"
                     android:textSize="@dimen/textSize14sp"
-                    android:layout_marginRight="@dimen/margin_10"
                     app:layout_constraintEnd_toStartOf="@id/imageView2"
                     app:layout_constraintHorizontal_bias="0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -89,8 +89,8 @@
                     android:id="@+id/imageView2"
                     android:layout_width="12dp"
                     android:layout_height="12dp"
-                    android:src="@drawable/ic_arrow_down_gray"
                     android:layout_gravity="center_vertical"
+                    android:src="@drawable/ic_arrow_down_gray"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_league"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -103,10 +103,11 @@
         android:id="@+id/cl_game_search"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/color_FFFFFF"
+        android:background="@color/color_202541_FFFFFF"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/margin_10"
+        android:paddingHorizontal="@dimen/margin_14"
+        android:paddingVertical="@dimen/margin_13"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linear_filter">
@@ -114,11 +115,8 @@
         <EditText
             android:id="@+id/et_key_word"
             android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="6dp"
+            android:layout_height="34dp"
             android:layout_weight="3"
-            android:paddingLeft="@dimen/margin_5"
             android:background="@drawable/search_box_gray"
             android:ellipsize="end"
             android:gravity="center_vertical|start"
@@ -140,11 +138,9 @@
 
         <Button
             android:id="@+id/btn_refresh"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="@dimen/margin_10"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:layout_marginEnd="@dimen/margin_5"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginStart="10dp"
             android:background="@drawable/icon_result_refresh"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/et_key_word"
@@ -156,13 +152,14 @@
         android:id="@+id/rv_date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/color_191919_FCFCFC"
+        android:background="@color/color_202541_FFFFFF"
         android:clipToPadding="false"
         android:orientation="horizontal"
         android:overScrollMode="never"
-        android:paddingHorizontal="3dp"
-        android:paddingVertical="5dp"
-        android:layout_marginTop="@dimen/margin_10"
+        android:paddingTop="@dimen/margin_15"
+        android:paddingBottom="@dimen/margin_4"
+        android:paddingHorizontal="@dimen/margin_11"
+        android:layout_marginTop="@dimen/margin_9"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -172,7 +169,7 @@
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@android:color/transparent"
+        android:background="@color/color_202541_FFFFFF"
         android:visibility="visible"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -189,6 +186,8 @@
             android:id="@+id/refactor_rv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingHorizontal="@dimen/margin_14"
+            android:paddingBottom="@dimen/margin_10"
             android:overScrollMode="never"
             android:visibility="visible"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
