--- a/app/src/main/res/layout/content_game_detail_result_ih_rv.xml
+++ b/app/src/main/res/layout/content_game_detail_result_ih_rv.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_191919_FCFCFC"
+    android:background="@drawable/bg_no_top_bottom_stroke_white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -35,7 +36,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/section"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_9BB3D9_535D76"
                     android:textSize="@dimen/textSize12sp" />
 
                 <LinearLayout
@@ -48,7 +49,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/first"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                     <TextView
@@ -57,7 +58,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/second"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                     <TextView
@@ -66,7 +67,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/third"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
 
@@ -80,7 +81,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/total_score_over_time"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize12sp" />
 
 
@@ -89,7 +90,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,13 +108,13 @@
                 android:paddingTop="6dp"
                 android:paddingEnd="10dp"
                 android:paddingBottom="6dp"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize14sp" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <TextView
                 android:id="@+id/tv_home_first"
@@ -124,13 +125,13 @@
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 tools:text="0"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <TextView
                 android:id="@+id/tv_home_second"
@@ -141,13 +142,13 @@
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 tools:text="0"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <TextView
                 android:id="@+id/tv_home_third"
@@ -158,13 +159,13 @@
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 tools:text="0"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <TextView
                 android:id="@+id/tv_home_over_time"
@@ -175,7 +176,7 @@
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 android:text=""
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
 
@@ -184,7 +185,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -202,13 +203,13 @@
                 android:paddingTop="6dp"
                 android:paddingEnd="10dp"
                 android:paddingBottom="6dp"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize14sp" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <TextView
                 android:id="@+id/tv_away_first"
@@ -219,13 +220,13 @@
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 tools:text="0"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <TextView
                 android:id="@+id/tv_away_second"
@@ -236,13 +237,13 @@
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 tools:text="0"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <TextView
                 android:id="@+id/tv_away_third"
@@ -253,13 +254,13 @@
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 tools:text="0"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <TextView
                 android:id="@+id/tv_away_over_time"
@@ -270,7 +271,7 @@
                 android:paddingTop="6dp"
                 android:paddingBottom="6dp"
                 android:text=""
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_6C7BA8_6C7BA8"
                 android:textSize="@dimen/textSize14sp" />
 
         </LinearLayout>
@@ -279,7 +280,7 @@
             android:id="@+id/bottom_line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
     </LinearLayout>
 </LinearLayout>
