--- a/app/src/main/res/layout/content_game_detail_result_rv.xml
+++ b/app/src/main/res/layout/content_game_detail_result_rv.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_191919_FCFCFC"
-    android:orientation="vertical">
+    android:background="@drawable/bg_no_top_bottom_stroke_white"
+    android:orientation="vertical"
+    tools:ignore="SpUsage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,14 +21,14 @@
             android:gravity="center"
             android:paddingHorizontal="10dp"
             android:paddingVertical="6dp"
-            android:textColor="@color/color_909090_666666"
+            android:textColor="@color/color_6C7BA8_6C7BA8"
             android:textSize="@dimen/textSize12sp"
             tools:text="让球" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
         <TextView
             android:id="@+id/tv_play_content"
@@ -37,7 +39,7 @@
             android:gravity="center"
             android:paddingHorizontal="10dp"
             android:paddingVertical="6dp"
-            android:textColor="@color/color_909090_666666"
+            android:textColor="@color/color_9BB3D9_535D76"
             android:textSize="@dimen/textSize12sp"
             tools:text="RS巴西体育工会" />
     </LinearLayout>
@@ -46,5 +48,5 @@
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_1F1F1F_E2E2E2" />
+        android:background="@color/color_80334266_E3E8EE" />
 </LinearLayout>
