--- a/app/src/main/res/layout/content_game_detail_result_tt_rv.xml
+++ b/app/src/main/res/layout/content_game_detail_result_tt_rv.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_191919_FCFCFC"
+    android:background="@drawable/bg_no_top_bottom_stroke_white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -28,7 +29,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/score"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize12sp" />
 
             <TextView
@@ -37,7 +38,7 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/plat"
-                android:textColor="@color/color_909090_666666"
+                android:textColor="@color/color_9BB3D9_535D76"
                 android:textSize="@dimen/textSize12sp" />
 
         </LinearLayout>
@@ -48,7 +49,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_1F1F1F_E2E2E2" />
+        android:background="@color/color_80334266_E3E8EE" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,14 +67,14 @@
             android:paddingTop="6dp"
             android:paddingEnd="10dp"
             android:paddingBottom="6dp"
-            android:textColor="@color/color_909090_666666"
+            android:textColor="@color/color_9BB3D9_535D76"
             android:textSize="@dimen/textSize12sp"
             tools:text="BB模拟主队NE2201041646"/>
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
         <TextView
             android:id="@+id/tt_score_first"
@@ -83,14 +84,14 @@
             android:gravity="center"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
-            android:textColor="@color/color_7F7F7F_999999"
+            android:textColor="@color/color_6C7BA8_6C7BA8"
             android:textSize="@dimen/textSize14sp"
             tools:text="0" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
         <TextView
             android:id="@+id/tt_plat_first"
@@ -100,21 +101,21 @@
             android:gravity="center"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
-            android:textColor="@color/color_7F7F7F_999999"
+            android:textColor="@color/color_6C7BA8_6C7BA8"
             android:textSize="@dimen/textSize14sp"
             tools:text="0" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_1F1F1F_E2E2E2" />
+        android:background="@color/color_80334266_E3E8EE" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -132,14 +133,14 @@
             android:paddingTop="6dp"
             android:paddingEnd="10dp"
             android:paddingBottom="6dp"
-            android:textColor="@color/color_909090_666666"
+            android:textColor="@color/color_9BB3D9_535D76"
             android:textSize="@dimen/textSize12sp"
             tools:text="BB模拟客队NE2201041646"/>
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
         <TextView
             android:id="@+id/tt_score_second"
@@ -149,14 +150,14 @@
             android:gravity="center"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
-            android:textColor="@color/color_7F7F7F_999999"
+            android:textColor="@color/color_6C7BA8_6C7BA8"
             android:textSize="@dimen/textSize14sp"
             tools:text="0" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
         <TextView
             android:id="@+id/tt_plat_second"
@@ -166,14 +167,14 @@
             android:gravity="center"
             android:paddingTop="6dp"
             android:paddingBottom="6dp"
-            android:textColor="@color/color_7F7F7F_999999"
+            android:textColor="@color/color_6C7BA8_6C7BA8"
             android:textSize="@dimen/textSize14sp"
             tools:text="0" />
 
         <View
             android:layout_width="1dp"
             android:layout_height="match_parent"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
 
     </LinearLayout>
@@ -182,6 +183,6 @@
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_1F1F1F_E2E2E2" />
+        android:background="@color/color_80334266_E3E8EE" />
 
 </LinearLayout>
