--- a/app/src/main/res/layout/content_game_detail_result_vb_rv.xml
+++ b/app/src/main/res/layout/content_game_detail_result_vb_rv.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ll_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_191919_FCFCFC"
+    android:background="@drawable/bg_no_top_bottom_stroke_white"
     android:orientation="vertical">
 
     <LinearLayout
@@ -40,7 +41,7 @@
                         android:layout_weight="5"
                         android:gravity="center"
                         android:text="@string/plat"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                     <View
@@ -60,7 +61,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/first"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                     <TextView
@@ -69,7 +70,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/second"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                     <TextView
@@ -78,7 +79,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/third"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                     <TextView
@@ -87,7 +88,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/fourth"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                     <TextView
@@ -96,7 +97,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/fifth"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                     <TextView
@@ -105,7 +106,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/score"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                     <TextView
@@ -114,7 +115,7 @@
                         android:layout_weight="1"
                         android:gravity="center"
                         android:text="@string/plat"
-                        android:textColor="@color/color_909090_666666"
+                        android:textColor="@color/color_9BB3D9_535D76"
                         android:textSize="@dimen/textSize12sp" />
 
                 </LinearLayout>
@@ -127,7 +128,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -152,13 +153,13 @@
                     android:paddingTop="6dp"
                     android:paddingEnd="10dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_9BB3D9_535D76"
                     android:textSize="@dimen/textSize14sp" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_home_first"
@@ -168,7 +169,7 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="0" />
             </LinearLayout>
@@ -176,7 +177,7 @@
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -194,14 +195,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="0" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_home_third"
@@ -211,14 +212,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="0" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_home_fourth"
@@ -228,14 +229,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="0" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_home_fifth"
@@ -245,14 +246,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_home_score"
@@ -262,14 +263,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_home_round"
@@ -279,7 +280,7 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="" />
 
@@ -291,7 +292,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -316,13 +317,13 @@
                     android:paddingTop="6dp"
                     android:paddingEnd="10dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_9BB3D9_535D76"
                     android:textSize="@dimen/textSize14sp" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_away_first"
@@ -332,7 +333,7 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="0" />
             </LinearLayout>
@@ -340,7 +341,7 @@
             <View
                 android:layout_width="1dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_1F1F1F_E2E2E2" />
+                android:background="@color/color_80334266_E3E8EE" />
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -358,14 +359,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="0" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_away_third"
@@ -375,14 +376,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="0" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_away_fourth"
@@ -392,14 +393,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="0" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_away_fifth"
@@ -409,14 +410,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_away_score"
@@ -426,14 +427,14 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="" />
 
                 <View
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:background="@color/color_1F1F1F_E2E2E2" />
+                    android:background="@color/color_80334266_E3E8EE" />
 
                 <TextView
                     android:id="@+id/tv_away_round"
@@ -443,7 +444,7 @@
                     android:gravity="center"
                     android:paddingTop="6dp"
                     android:paddingBottom="6dp"
-                    android:textColor="@color/color_909090_666666"
+                    android:textColor="@color/color_6C7BA8_6C7BA8"
                     android:textSize="@dimen/textSize14sp"
                     tools:text="" />
 
@@ -456,7 +457,7 @@
             android:id="@+id/bottom_line"
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_1F1F1F_E2E2E2" />
+            android:background="@color/color_80334266_E3E8EE" />
 
     </LinearLayout>
 </LinearLayout>
