--- a/app/src/main/res/layout/item_match_result_match_new.xml
+++ b/app/src/main/res/layout/item_match_result_match_new.xml
@@ -4,17 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:ignore="SpUsage">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:orientation="horizontal">
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/color_80334266_E3E8EE"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/cl_content"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:layout_weight="2"
             android:background="@color/color_bbbbbb_ffffff"
             android:orientation="vertical"
@@ -96,7 +102,7 @@
         <LinearLayout
             android:id="@+id/ll_score"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@color/color_bbbbbb_ffffff"
             app:layout_constraintTop_toTopOf="parent"
@@ -168,18 +174,12 @@
                 tools:text="3-0" />
 
         </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/color_80334266_E3E8EE"/>
     </LinearLayout>
-
-
-    <View
-        android:id="@+id/divider_line"
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/color_1F1F1F_E2E2E2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cl_content" />
-
 
     <LinearLayout
         android:id="@+id/ll_game_detail"
@@ -189,7 +189,7 @@
         android:orientation="horizontal"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:background="@color/color_F7F8FC"
+        android:background="@drawable/bg_shape_bottom_8dp_gray_stroke_no_top_stroke"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider_line">
@@ -199,7 +199,6 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_marginEnd="10dp"
-            android:background="@drawable/bg_radius_20_white"
             android:src="@drawable/icon_more" />
 
         <TextView
@@ -217,10 +216,6 @@
     <View
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/color_1F1F1F_E2E2E2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_game_detail" />
+        android:layout_height="0dp" />
 
 </LinearLayout>
