--- a/app/src/main/res/layout/item_outright_result_outright.xml
+++ b/app/src/main/res/layout/item_outright_result_outright.xml
@@ -13,12 +13,18 @@
         android:background="@color/color_bbbbbb_ffffff"
         android:orientation="horizontal">
 
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/color_80334266_E3E8EE"/>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
+            android:gravity="center_vertical"
             android:orientation="vertical"
-            android:padding="12dp">
+            android:paddingHorizontal="12dp">
 
             <TextView
                 android:id="@+id/tv_content"
@@ -50,6 +56,11 @@
             android:paddingHorizontal="14dp"
             tools:text="Bodo/Glimt" />
 
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:background="@color/color_80334266_E3E8EE"/>
+
     </LinearLayout>
 
     <TextView
@@ -58,13 +69,12 @@
         android:layout_height="36dp"
         android:gravity="center"
         android:textColor="@color/color_6C7BA8_6C7BA8"
-        android:background="@color/color_202541_F7F8FC"
+        android:background="@drawable/bg_shape_bottom_8dp_gray_stroke_no_top_stroke"
         android:textSize="@dimen/textSize14sp"
         tools:text="2019-09-20 08:00" />
 
     <View
         android:id="@+id/bottom_line"
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/color_191919_EEEFF0" />
+        android:layout_height="0dp" />
 </LinearLayout>
