[Fix] OK-1273 【OKBET-UI-Android-Bet Slip】VNM - Text of Total Amounts in Bet Cart looks dense (投注车中的总金额文本看起来很密集)

--- a/app/src/main/res/layout/fragment_bet_list.xml
+++ b/app/src/main/res/layout/fragment_bet_list.xml
@@ -196,6 +196,7 @@
                             app:layout_constraintGuide_percent="0.5" />
 
                         <LinearLayout
+                            android:id="@+id/ll_total_stake"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             app:layout_constraintTop_toTopOf="parent"
@@ -229,6 +230,7 @@
                         </LinearLayout>
 
                         <LinearLayout
+                            android:id="@+id/ll_est_winning"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:gravity="end"
